--- a/SMLApplication.Web/Views/Channel/Index.cshtml
+++ b/SMLApplication.Web/Views/Channel/Index.cshtml
@@ -26,11 +26,11 @@
         <tr>
             <td> @item.Doctor.Name</td>
             <td> @item.Patient.Name </td>
-            <td> @DateTime.Now.ToString() </td>
+            <td> @DateTime.Now.ToString(); </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.Id  }) |
+                @Html.ActionLink("Details", "Details", new {  id=item.Id  }) |
+                @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
             </td>
         </tr>
     }
